--- a/ParseGenerator/ParseGenerator.csproj
+++ b/ParseGenerator/ParseGenerator.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EC6F8CBF-8E6D-4273-AC42-B4B484B7422B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ParseTableGenerator</RootNamespace>
-    <AssemblyName>ParseTableGenerator</AssemblyName>
+    <RootNamespace>ParseGenerator</RootNamespace>
+    <AssemblyName>ParseGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLR\LR1Collection.cs" />
+    <Compile Include="CLR\LR1Item.cs" />
     <Compile Include="FirstFollow\FirstFollowGenerator.cs" />
     <Compile Include="FirstFollow\FirstFollowSet.cs" />
     <Compile Include="Grammar\Grammar.cs" />
