--- a/ParseGenerator/ParseGenerator.csproj
+++ b/ParseGenerator/ParseGenerator.csproj
@@ -47,17 +47,26 @@
     <Compile Include="FirstFollow\FirstFollowGenerator.cs" />
     <Compile Include="FirstFollow\FirstFollowSet.cs" />
     <Compile Include="Grammar\Grammar.cs" />
+    <Compile Include="Grammar\LRCollection.cs" />
     <Compile Include="Grammar\Production.cs" />
     <Compile Include="Grammar\ProductionSymbol.cs" />
+    <Compile Include="Parser\ActionTableEntry.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SLR\LR0Collection.cs" />
     <Compile Include="SLR\LR0Item.cs" />
+    <Compile Include="SLR\SLRParseTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CompilingPrinciples\CompilingPrinciples.csproj">
+      <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
+      <Name>CompilingPrinciples</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
