--- a/ParserGenerator/ParserGenerator.csproj
+++ b/ParserGenerator/ParserGenerator.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Grammar\Production.cs" />
     <Compile Include="Grammar\ProductionSymbol.cs" />
     <Compile Include="Parser\ActionTableEntry.cs" />
+    <Compile Include="Parser\IParserErrorRoutine.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
     <Compile Include="Program.cs" />
