--- a/LexcialAnalyzer/LexcialAnalyzer.csproj
+++ b/LexcialAnalyzer/LexcialAnalyzer.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Lexer\Token.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Symbol\SymbolTable.cs" />
+    <Compile Include="SymbolEnvironment\SymbolTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
