--- a/ParserGenerator/ParserGenerator.csproj
+++ b/ParserGenerator/ParserGenerator.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Parser\IParserErrorRoutine.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
+    <Compile Include="Parser\SymbolStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SLR\LR0Collection.cs" />
