--- a/SyntaxAnalyzer/SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/SyntaxAnalyzer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EC6F8CBF-8E6D-4273-AC42-B4B484B7422B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ParserGenerator</RootNamespace>
-    <AssemblyName>ParserGenerator</AssemblyName>
+    <RootNamespace>SyntaxAnalyzer</RootNamespace>
+    <AssemblyName>SyntaxAnalyzer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
