--- a/LexcialAnalyzer/LexcialAnalyzer.csproj
+++ b/LexcialAnalyzer/LexcialAnalyzer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{48A30C7A-21A5-459B-8CB9-3EBBB921AAF8}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LexicalAnalyzer</RootNamespace>
     <AssemblyName>LexicalAnalyzer</AssemblyName>
