--- a/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48A30C7A-21A5-459B-8CB9-3EBBB921AAF8}</ProjectGuid>
+    <ProjectGuid>{EC6F8CBF-8E6D-4273-AC42-B4B484B7422B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LexicalAnalyzer</RootNamespace>
-    <AssemblyName>LexicalAnalyzer</AssemblyName>
+    <RootNamespace>CompilingPrinciples.SyntaxAnalyzer</RootNamespace>
+    <AssemblyName>CompilingPrinciples.SyntaxAnalyzer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -33,20 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup />
-  <PropertyGroup />
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ScintillaNET, Version=3.5.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\jacobslusser.ScintillaNET.3.5.6\lib\net40\ScintillaNET.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,28 +43,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LexerForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LexerForm.Designer.cs">
-      <DependentUpon>LexerForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Lexer\Lexer.cs" />
-    <Compile Include="Lexer\Tag.cs" />
-    <Compile Include="Lexer\Token.cs" />
+    <Compile Include="LR1\LR1Collection.cs" />
+    <Compile Include="LR1\LR1Item.cs" />
+    <Compile Include="LR1\LR1ParseTable.cs" />
+    <Compile Include="FirstFollow\FirstFollowGenerator.cs" />
+    <Compile Include="FirstFollow\FirstFollowSet.cs" />
+    <Compile Include="Grammar\Grammar.cs" />
+    <Compile Include="Grammar\LRCollection.cs" />
+    <Compile Include="Grammar\Production.cs" />
+    <Compile Include="Grammar\ProductionSymbol.cs" />
+    <Compile Include="Parser\ActionTableEntry.cs" />
+    <Compile Include="Parser\IParserErrorRoutine.cs" />
+    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\ParseTable.cs" />
+    <Compile Include="Parser\SymbolStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolEnvironment\SymbolTable.cs" />
+    <Compile Include="SLR\LR0Collection.cs" />
+    <Compile Include="SLR\LR0Item.cs" />
+    <Compile Include="SLR\SLRParseTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="app.manifest" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LexerForm.resx">
-      <DependentUpon>LexerForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\LexcialAnalyzer\CompilingPrinciples.LexcialAnalyzer.csproj">
+      <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
+      <Name>CompilingPrinciples.LexcialAnalyzer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
