--- a/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EC6F8CBF-8E6D-4273-AC42-B4B484B7422B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CompilingPrinciples.SyntaxAnalyzer</RootNamespace>
     <AssemblyName>CompilingPrinciples.SyntaxAnalyzer</AssemblyName>
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,7 +60,6 @@
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
     <Compile Include="Parser\SymbolStack.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SLR\LR0Collection.cs" />
     <Compile Include="SLR\LR0Item.cs" />
