--- a/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
@@ -69,9 +69,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LexcialAnalyzer\CompilingPrinciples.LexcialAnalyzer.csproj">
+    <ProjectReference Include="..\LexcialAnalyzer\CompilingPrinciples.LexicalAnalyzer.csproj">
       <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
-      <Name>CompilingPrinciples.LexcialAnalyzer</Name>
+      <Name>CompilingPrinciples.LexicalAnalyzer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
