--- a/TestCase/CompilingPrinciples.TestCase.csproj
+++ b/TestCase/CompilingPrinciples.TestCase.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CompilingPrinciples.TestCase</RootNamespace>
     <AssemblyName>CompilingPrinciples.TestCase</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -65,6 +68,7 @@
     <Compile Include="ParserTest\GenerateWaitingForm.Designer.cs">
       <DependentUpon>GenerateWaitingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParserTest\LR1ParserErrorRoutine.cs" />
     <Compile Include="ParserTest\ParserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +76,7 @@
       <DependentUpon>ParserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ParserTest\ParserTest.cs" />
+    <Compile Include="ParserTest\SLRParserErrorRoutine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
