--- a/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
+++ b/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
@@ -82,6 +82,20 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LexcialAnalyzer\CompilingPrinciples.LexicalAnalyzer.csproj">
+      <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
+      <Name>CompilingPrinciples.LexicalAnalyzer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SyntaxAnalyzer\CompilingPrinciples.SyntaxAnalyzer.csproj">
+      <Project>{ec6f8cbf-8e6d-4273-ac42-b4b484b7422b}</Project>
+      <Name>CompilingPrinciples.SyntaxAnalyzer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\CompilingPrinciples.Utility.csproj">
+      <Project>{31818b4e-cd83-4ab9-b486-04ceeaadcb3f}</Project>
+      <Name>CompilingPrinciples.Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
