--- a/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
+++ b/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
@@ -35,6 +35,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ScintillaNET">
+      <HintPath>..\packages\jacobslusser.ScintillaNET.3.5.6\lib\net40\ScintillaNET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
