--- a/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
+++ b/SyntaxAnalyzer/CompilingPrinciples.SyntaxAnalyzer.csproj
@@ -40,6 +40,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ScintillaNET">
+      <HintPath>..\packages\jacobslusser.ScintillaNET.3.5.6\lib\net40\ScintillaNET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
