--- a/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
+++ b/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
@@ -59,6 +59,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolveConflict.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SolveConflict.Designer.cs">
+      <DependentUpon>SolveConflict.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -71,6 +77,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SolveConflict.resx">
+      <DependentUpon>SolveConflict.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
