--- a/Utility/CompilingPrinciples.Utility.csproj
+++ b/Utility/CompilingPrinciples.Utility.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenerateParserHelper.cs" />
     <Compile Include="GenerateWaitingForm.cs">
       <SubType>Form</SubType>
     </Compile>
