--- a/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
+++ b/ParserGenerator/CompilingPrinciples.ParserGenerator.csproj
@@ -96,9 +96,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LexcialAnalyzer\CompilingPrinciples.LexicalAnalyzer.csproj">
+    <ProjectReference Include="..\LexerModule\CompilingPrinciples.LexerModule.csproj">
       <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
-      <Name>CompilingPrinciples.LexicalAnalyzer</Name>
+      <Name>CompilingPrinciples.LexerModule</Name>
     </ProjectReference>
     <ProjectReference Include="..\SyntaxAnalyzer\CompilingPrinciples.SyntaxAnalyzer.csproj">
       <Project>{ec6f8cbf-8e6d-4273-ac42-b4b484b7422b}</Project>
