--- a/ParserModule/CompilingPrinciples.ParserModule.csproj
+++ b/ParserModule/CompilingPrinciples.ParserModule.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EC6F8CBF-8E6D-4273-AC42-B4B484B7422B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CompilingPrinciples.SyntaxAnalyzer</RootNamespace>
-    <AssemblyName>CompilingPrinciples.SyntaxAnalyzer</AssemblyName>
+    <RootNamespace>CompilingPrinciples.ParserModule</RootNamespace>
+    <AssemblyName>CompilingPrinciples.ParserModule</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
