--- a/TestCase/CompilingPrinciples.TestCase.csproj
+++ b/TestCase/CompilingPrinciples.TestCase.csproj
@@ -72,9 +72,9 @@
       <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
       <Name>CompilingPrinciples.LexerModule</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SyntaxAnalyzer\CompilingPrinciples.SyntaxAnalyzer.csproj">
+    <ProjectReference Include="..\ParserModule\CompilingPrinciples.ParserModule.csproj">
       <Project>{ec6f8cbf-8e6d-4273-ac42-b4b484b7422b}</Project>
-      <Name>CompilingPrinciples.SyntaxAnalyzer</Name>
+      <Name>CompilingPrinciples.ParserModule</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utility\CompilingPrinciples.Utility.csproj">
       <Project>{31818b4e-cd83-4ab9-b486-04ceeaadcb3f}</Project>
