--- a/ParserModule/CompilingPrinciples.ParserModule.csproj
+++ b/ParserModule/CompilingPrinciples.ParserModule.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Parser\Interfaces.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
-    <Compile Include="Parser\SymbolStack.cs" />
+    <Compile Include="Parser\PrintableStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SLR\LR0Collection.cs" />
     <Compile Include="SLR\LR0Item.cs" />
