--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48A30C7A-21A5-459B-8CB9-3EBBB921AAF8}</ProjectGuid>
+    <ProjectGuid>{31818B4E-CD83-4AB9-B486-04CEEAADCB3F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CompilingPrinciples.LexModule</RootNamespace>
-    <AssemblyName>CompilingPrinciples.LexerModule</AssemblyName>
+    <RootNamespace>CompilingPrinciples.Utility</RootNamespace>
+    <AssemblyName>Utility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,43 +20,57 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup />
-  <PropertyGroup />
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lexer\Lexer.cs" />
-    <Compile Include="Lexer\Tag.cs" />
-    <Compile Include="Lexer\Token.cs" />
+    <Compile Include="GenerateParserHelper.cs" />
+    <Compile Include="GenerateWaitingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerateWaitingForm.Designer.cs">
+      <DependentUpon>GenerateWaitingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LR1ParserErrorRoutine.cs" />
+    <Compile Include="ParserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolEnvironment\SymbolTable.cs" />
+    <Compile Include="SLRParserErrorRoutine.cs" />
+    <Compile Include="EnhancedControls.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\LexerModule\LexerCore.csproj">
+      <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
+      <Name>LexerCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ParserModule\ParserCore.csproj">
+      <Project>{ec6f8cbf-8e6d-4273-ac42-b4b484b7422b}</Project>
+      <Name>ParserCore</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GenerateWaitingForm.resx">
+      <DependentUpon>GenerateWaitingForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
