--- a/GUIParser/GUIParser.csproj
+++ b/GUIParser/GUIParser.csproj
@@ -105,11 +105,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LexerModule\LexerCore.csproj">
+    <ProjectReference Include="..\LexerCore\LexerCore.csproj">
       <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
       <Name>LexerCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ParserModule\ParserCore.csproj">
+    <ProjectReference Include="..\ParserCore\ParserCore.csproj">
       <Project>{ec6f8cbf-8e6d-4273-ac42-b4b484b7422b}</Project>
       <Name>ParserCore</Name>
     </ProjectReference>
