--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -49,10 +49,9 @@
     <Compile Include="GenerateWaitingForm.Designer.cs">
       <DependentUpon>GenerateWaitingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LR1ParserErrorRoutine.cs" />
     <Compile Include="ParserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SLRParserErrorRoutine.cs" />
+    <Compile Include="ParserErrorRoutine.cs" />
     <Compile Include="EnhancedControls.cs">
       <SubType>Component</SubType>
     </Compile>
