--- a/TestCase/TestCase.csproj
+++ b/TestCase/TestCase.csproj
@@ -57,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InterCodeGenTest\InterCodeGenTest.cs" />
+    <Compile Include="InterCodeGenTest\TreeTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InterCodeGenTest\TreeTest.Designer.cs">
+      <DependentUpon>TreeTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="LexerTest\LexerTest.cs" />
     <Compile Include="ParserTest\ParserTest.cs" />
     <Compile Include="Program.cs" />
@@ -87,6 +93,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="InterCodeGenTest\TreeTest.resx">
+      <DependentUpon>TreeTest.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
