--- a/IntermediateCodeGenCore/IntermediateCodeGenCore.csproj
+++ b/IntermediateCodeGenCore/IntermediateCodeGenCore.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IntermediateCodeGen.cs" />
     <Compile Include="Label.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SDTTreeNodeEntry.cs" />
     <Compile Include="TempVar.cs" />
   </ItemGroup>
   <ItemGroup>
